# lacuna

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLI.md  CONTEXT.md  DEMO.md  DEMO_GAP_ANALYSIS.md  DEMO_SCRIPT.md  Dockerfile  Makefile  QUICKSTART.md  QUICKSTART.md.bak  README.md  SUMMARY.md  docker-compose.onprem.yml  docker-compose.yml  pyproject.toml  render.yaml  run.sh  test-deployed.sh
backend/: config.py  document_processor.py  main.py  requirement_extractor.py  state.py  vector_store.py
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  changes.py  confirm.py  decompose.py  documents.py  evidence.py  gap_analysis.py  integrations.py  policies.py  query.py  remediation.py  requirements.py  synthesis.py  system.py
backend/services/: __init__.py  change_service.py  confirm_service.py  decompose_service.py  document_service.py  evidence_service.py  gap_analysis_service.py  gap_graph.py  integration_service.py  llm_service.py  policy_service.py  query_service.py  requirement_service.py  scan_service.py  synthesis_service.py  system_service.py
backend/storage/: __init__.py  (+3 more)
cli/: __init__.py  main.py
data/: audit_log.json  change_log.json  evidence_db.json  policies_db.json  sources_db.json  webhooks_db.json
demo-docs/: codex-argentum-v1.txt  hsbc-group-ai-standard-ch5-gennai-v2.1.txt
docs/: buyer-one-pager.md
frontend/: index.html
scripts/: docker-build.sh  docker-run.sh  seed_corpus.py  test.sh
tests/: browser_test_gap.py  e2e_reg_atlas.py  test_ai_governance.py  test_decompose.py  test_gap_analysis.py
todos/: 001-complete-p1-audit-grade-impact-brief.md
tools/: seed_corpus.py  update_aliases.py
(+56 files in other folders)
