[project]
name = "reg-atlas"
version = "0.1.0"
description = "RegAtlas - Cross-jurisdiction regulatory analytics platform for financial institutions"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pypdf>=3.17.0",
    "chromadb>=0.4.22",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer[all]>=0.9.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "duckdb>=0.10.0",
    "feedparser>=6.0.0",
]

[project.scripts]
regatlas = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

llamaindex = [
    "llama-index>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
